# entropy-frameworks

./: .env.example  .gitignore  README.md  pyproject.toml  theory-of-entropy.tex
apps/admin-web/: index.html  package-lock.json  package.json
apps/admin-web/src/: App.tsx  styles.css
configs/: datasets.yaml
configs/experiments/: e01_synthetic_shannon.yaml
data/: README.md
src/visionentropy/: __init__.py
src/visionentropy/api/: __init__.py  server.py
src/visionentropy/cli/: main.py
src/visionentropy/datasets/: __init__.py  base.py  oxford_pets.py  registry.py  skimage_examples.py  synthetic_shapes.py
src/visionentropy/deep/: __init__.py  features.py
src/visionentropy/entropy/: __init__.py  base.py  information.py  maps.py
src/visionentropy/evaluation/: __init__.py  segmentation.py
src/visionentropy/graphs/: __init__.py  entropy.py
src/visionentropy/pipeline/: __init__.py  base.py  comparison.py  metadata.py  vertical_slice.py
src/visionentropy/preprocessing/: __init__.py  base.py  normalize.py  resize.py
src/visionentropy/representations/: __init__.py  base.py  color_spaces.py  regions.py  registry.py
src/visionentropy/segmentation/: __init__.py  classical.py  clustering.py  thresholding.py
tests/: test_api_server.py  test_comparison.py  test_datasets.py  test_entropy_information.py  test_preprocessing_representations.py  test_vertical_slice.py
