[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visionentropy"
version = "0.1.0"
description = "Entropy-guided image segmentation framework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "scikit-image>=0.23",
    "scikit-learn>=1.4",
    "networkx>=3.2",
    "pyyaml>=6.0",
    "pillow>=10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
deep = [
    "torch>=2.3",
    "torchvision>=0.18",
]

[project.scripts]
visionentropy = "visionentropy.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/visionentropy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
